--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -260,6 +260,13 @@ releases:
         repositories:
         - extensions
 
+      check-efficiency:
+        image: extensions/docker:${ESTAFETTE_BUILD_VERSION}
+        action: dive
+        container: docker
+        repositories:
+        - extensions
+
       push-to-docker-hub:
         image: extensions/docker:nanoserver-1809-stable
         action: push
