--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -26,6 +26,7 @@ stages:
     action: build
     container: docker
     inline: |
+      # syntax=docker/dockerfile:1.2
       FROM alpine:3.13
 
       ARG DIVE_VERSION=0.10.0
@@ -90,6 +91,7 @@ stages:
         action: build
         container: docker-test
         inline: |
+          # syntax=docker/dockerfile:1.2
           FROM docker:19.03.13
 
           RUN apk update \
