--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -301,7 +301,7 @@ releases:
         - go build -v -ldflags "-X main.app=%ESTAFETTE_GIT_NAME% -X main.version=%ESTAFETTE_BUILD_VERSION% -X main.revision=%ESTAFETTE_GIT_REVISION% -X main.branch=%ESTAFETTE_GIT_BRANCH% -X main.buildDate=%ESTAFETTE_BUILD_DATETIME%" -o ./publish/%ESTAFETTE_GIT_NAME%.exe
 
       bake:
-        image: extensions/docker:nanoserver-1809-stable
+        image: extensions/docker:nanoserver-1809-dev
         action: build
         no-cache: true
         expand-variables: false
@@ -324,7 +324,7 @@ releases:
         - extensions
 
       push-to-docker-hub:
-        image: extensions/docker:nanoserver-1809-stable
+        image: extensions/docker:nanoserver-1809-dev
         action: push
         container: docker
         repositories:
