--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -123,7 +123,7 @@ stages:
               && rm -rf /var/cache/apk/* \
               && git version
 
-          FROM golang:1.16-alpine AS runtime
+          FROM golang:1.16-alpine
 
           LABEL maintainer="estafette.io"
 
