don't trigger nanoserver-1809-dev automatically

--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -219,10 +219,10 @@ releases:
     builder:
       os: windows
       track: nanoserver-1809-dev
-    triggers:
-    - pipeline:
-        name: self
-        branch: .+
+    # triggers:
+    # - pipeline:
+    #     name: self
+    #     branch: .+
     clone: true
     stages:
       build:
