--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -12,14 +12,24 @@ version:
     minor: 1
 
 stages:
-  build:
-    image: golang:1.17-alpine
-    env:
-      CGO_ENABLED: 0
-      GOOS: linux
-    commands:
-    - go test ./...
-    - go build -a -installsuffix cgo -ldflags "-X main.appgroup=${ESTAFETTE_LABEL_APP_GROUP} -X main.app=${ESTAFETTE_GIT_NAME} -X main.version=${ESTAFETTE_BUILD_VERSION} -X main.revision=${ESTAFETTE_GIT_REVISION} -X main.branch=${ESTAFETTE_GIT_BRANCH} -X main.buildDate=${ESTAFETTE_BUILD_DATETIME}" -o ./publish/${ESTAFETTE_GIT_NAME} .
+
+
+stages:
+  build-and-lint:
+    parallelStages:
+      build:
+        image: golang:1.17-alpine
+        env:
+          CGO_ENABLED: 0
+          GOOS: linux
+        commands:
+        - go test ./...
+        - go build -a -installsuffix cgo -ldflags "-X main.appgroup=${ESTAFETTE_LABEL_APP_GROUP} -X main.app=${ESTAFETTE_GIT_NAME} -X main.version=${ESTAFETTE_BUILD_VERSION} -X main.revision=${ESTAFETTE_GIT_REVISION} -X main.branch=${ESTAFETTE_GIT_BRANCH} -X main.buildDate=${ESTAFETTE_BUILD_DATETIME}" -o ./publish/${ESTAFETTE_GIT_NAME} .
+
+      lint:
+        image: golangci/golangci-lint:latest-alpine
+        commands:
+        - golangci-lint run --timeout 3m
 
   bake:
     image: extensions/docker:stable
