--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -44,6 +44,7 @@ stages:
         image: extensions/docker:${ESTAFETTE_BUILD_VERSION}
         action: build
         container: docker-test
+        severity: critical
         noCachePush: true
         inline: |
           FROM docker:latest
