--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -94,22 +94,22 @@ stages:
         copy:
         - /etc/ssl/certs/ca-certificates.crt
 
-      test-build-from-private-registry:
-        image: extensions/docker:${ESTAFETTE_BUILD_VERSION}
-        action: build
-        no-cache: true
-        container: hugo-test
-        inline: |
-          FROM extensions/docker:stable
-
-          COPY ca-certificates.crt /etc/ssl/certs/
-          COPY publish /publish
-        repositories:
-        - extensions
-        path: ./publish-hugo
-        copy:
-        - /etc/ssl/certs/ca-certificates.crt
-        - publish
+#      test-build-from-private-registry:
+#        image: extensions/docker:${ESTAFETTE_BUILD_VERSION}
+#        action: build
+#        no-cache: true
+#        container: hugo-test
+#        inline: |
+#          FROM extensions/docker:stable
+#
+#          COPY ca-certificates.crt /etc/ssl/certs/
+#          COPY publish /publish
+#        repositories:
+#        - extensions
+#        path: ./publish-hugo
+#        copy:
+#        - /etc/ssl/certs/ca-certificates.crt
+#        - publish
 
       test-history:
         image: extensions/docker:${ESTAFETTE_BUILD_VERSION}
