--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -196,7 +196,7 @@ releases:
         - go build -a -installsuffix cgo -ldflags "-X main.appgroup=${ESTAFETTE_LABEL_APP_GROUP} -X main.app=${ESTAFETTE_GIT_NAME} -X main.version=${ESTAFETTE_BUILD_VERSION} -X main.revision=${ESTAFETTE_GIT_REVISION} -X main.branch=${ESTAFETTE_GIT_BRANCH} -X main.buildDate=${ESTAFETTE_BUILD_DATETIME}" -o ./publish/${ESTAFETTE_GIT_NAME} .
 
       bake:
-        image: extensions/docker:stable
+        image: extensions/docker:dev
         action: build
         container: docker
         repositories:
@@ -205,7 +205,7 @@ releases:
         expandVariables: false
 
       push-to-docker-hub:
-        image: extensions/docker:stable
+        image: extensions/docker:dev
         action: push
         container: docker
         pushVersionTag: false
